--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,6 @@ applications:
 - name: patisserie-nodejs
   memory: 256M
   instances: 1
-  routes: 
-    - route: patisserie-nodejs-${random-word}.eu-de.mybluemix.net
+  random-route: true
   services:
   - patisserie-mysql
