--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"body-parser": "1.*",
 		"request": "2.*",
 		"htmlparser": "1.*",
-		"mysql": "2.*"
+		"mysql": "2.*",
+		"cors": "*"
 	},
 	"repository": {},
 	"engines": {
