--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
 	},
 	"dependencies": {
 		"express": "4.*",
+		"cors": "2.*",
 		"cfenv": "1.*",
 		"body-parser": "1.*",
 		"request": "2.*",
 		"htmlparser": "1.*",
-		"mysql": "2.*",
-		"cors": "*"
+		"mysql": "2.*"
 	},
 	"repository": {},
 	"engines": {
