--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 	},
 	"dependencies": {
 		"express": "4.*",
+		"object-assign":"4.*",
+		"vary":"1.*",
 		"cors": "2.*",
 		"cfenv": "1.*",
 		"body-parser": "1.*",
