--- a/package.json
+++ b/package.json
@@ -6,5 +6,14 @@
 	},
 	"engines": {
 		"node": "10.*"
-	} 
+	},
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"cfenv": "^1.2.2",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"htmlparser": "^1.7.7",
+		"mysql": "^2.17.1",
+		"request": "^2.88.0"
+	}
 }
