--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"express": "^4.17.1",
 		"htmlparser": "^1.7.7",
 		"mysql": "^2.17.1",
+		"path": "^0.12.7",
 		"request": "^2.88.0"
 	},
 	"repository": {},
